cdk.out/NftWalletViewerStack.template.json
{
  "Resources": {
    "nftsVPC6A9396D9": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/Resource"
      }
    },
    "nftsVPCPublicSubnet1SubnetC1E236F7": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/19",
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet1/Subnet"
      }
    },
    "nftsVPCPublicSubnet1RouteTable38009313": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet1/RouteTable"
      }
    },
    "nftsVPCPublicSubnet1RouteTableAssociation598395EE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCPublicSubnet1RouteTable38009313"
        },
        "SubnetId": {
          "Ref": "nftsVPCPublicSubnet1SubnetC1E236F7"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet1/RouteTableAssociation"
      }
    },
    "nftsVPCPublicSubnet1DefaultRoute1ADDA09D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCPublicSubnet1RouteTable38009313"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "nftsVPCIGW474FD3C2"
        }
      },
      "DependsOn": [
        "nftsVPCVPCGWA3D9655E"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet1/DefaultRoute"
      }
    },
    "nftsVPCPublicSubnet2Subnet09AEEBD3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.32.0/19",
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet2/Subnet"
      }
    },
    "nftsVPCPublicSubnet2RouteTableC3C3B3FE": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet2/RouteTable"
      }
    },
    "nftsVPCPublicSubnet2RouteTableAssociation29926838": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCPublicSubnet2RouteTableC3C3B3FE"
        },
        "SubnetId": {
          "Ref": "nftsVPCPublicSubnet2Subnet09AEEBD3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet2/RouteTableAssociation"
      }
    },
    "nftsVPCPublicSubnet2DefaultRouteB7E5198C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCPublicSubnet2RouteTableC3C3B3FE"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "nftsVPCIGW474FD3C2"
        }
      },
      "DependsOn": [
        "nftsVPCVPCGWA3D9655E"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet2/DefaultRoute"
      }
    },
    "nftsVPCPublicSubnet3Subnet22C3040C": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/19",
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet3/Subnet"
      }
    },
    "nftsVPCPublicSubnet3RouteTableD46FC15D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/PublicSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet3/RouteTable"
      }
    },
    "nftsVPCPublicSubnet3RouteTableAssociation4F663289": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCPublicSubnet3RouteTableD46FC15D"
        },
        "SubnetId": {
          "Ref": "nftsVPCPublicSubnet3Subnet22C3040C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet3/RouteTableAssociation"
      }
    },
    "nftsVPCPublicSubnet3DefaultRoute48FDF29C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCPublicSubnet3RouteTableD46FC15D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "nftsVPCIGW474FD3C2"
        }
      },
      "DependsOn": [
        "nftsVPCVPCGWA3D9655E"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/PublicSubnet3/DefaultRoute"
      }
    },
    "nftsVPCIsolatedSubnet1Subnet81677B69": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.96.0/19",
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet1/Subnet"
      }
    },
    "nftsVPCIsolatedSubnet1RouteTableD2E28E3A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet1/RouteTable"
      }
    },
    "nftsVPCIsolatedSubnet1RouteTableAssociation09F8E470": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCIsolatedSubnet1RouteTableD2E28E3A"
        },
        "SubnetId": {
          "Ref": "nftsVPCIsolatedSubnet1Subnet81677B69"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet1/RouteTableAssociation"
      }
    },
    "nftsVPCIsolatedSubnet2Subnet8AB5B053": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/19",
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet2/Subnet"
      }
    },
    "nftsVPCIsolatedSubnet2RouteTable07E4EFC5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet2/RouteTable"
      }
    },
    "nftsVPCIsolatedSubnet2RouteTableAssociationB2479C3A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCIsolatedSubnet2RouteTable07E4EFC5"
        },
        "SubnetId": {
          "Ref": "nftsVPCIsolatedSubnet2Subnet8AB5B053"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet2/RouteTableAssociation"
      }
    },
    "nftsVPCIsolatedSubnet3Subnet97E359DF": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.160.0/19",
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/IsolatedSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet3/Subnet"
      }
    },
    "nftsVPCIsolatedSubnet3RouteTable6DCED7FC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC/IsolatedSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet3/RouteTable"
      }
    },
    "nftsVPCIsolatedSubnet3RouteTableAssociationBC80D9F1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "nftsVPCIsolatedSubnet3RouteTable6DCED7FC"
        },
        "SubnetId": {
          "Ref": "nftsVPCIsolatedSubnet3Subnet97E359DF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IsolatedSubnet3/RouteTableAssociation"
      }
    },
    "nftsVPCIGW474FD3C2": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NftWalletViewerStack/nftsVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/IGW"
      }
    },
    "nftsVPCVPCGWA3D9655E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        },
        "InternetGatewayId": {
          "Ref": "nftsVPCIGW474FD3C2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/nftsVPC/VPCGW"
      }
    },
    "getWalletContentsServiceRole57419394": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletContents/ServiceRole/Resource"
      }
    },
    "getWalletContentsSecurityGroup1C5B8FC9": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatic security group for Lambda Function NftWalletViewerStackgetWalletContentsB498371A",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletContents/SecurityGroup/Resource"
      }
    },
    "getWalletContents8D2C02F0": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-222439617721-us-east-1",
          "S3Key": "c2e2ead5050653ee88805d87e5a3bb28173f11694774c7dab81e987a35dc5db1.zip"
        },
        "Role": {
          "Fn::GetAtt": [
            "getWalletContentsServiceRole57419394",
            "Arn"
          ]
        },
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1"
          }
        },
        "Handler": "index.handle",
        "MemorySize": 256,
        "Runtime": "nodejs14.x",
        "Timeout": 60,
        "VpcConfig": {
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "getWalletContentsSecurityGroup1C5B8FC9",
                "GroupId"
              ]
            }
          ],
          "SubnetIds": [
            {
              "Ref": "nftsVPCIsolatedSubnet1Subnet81677B69"
            },
            {
              "Ref": "nftsVPCIsolatedSubnet2Subnet8AB5B053"
            },
            {
              "Ref": "nftsVPCIsolatedSubnet3Subnet97E359DF"
            }
          ]
        }
      },
      "DependsOn": [
        "getWalletContentsServiceRole57419394"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletContents/Resource",
        "aws:asset:path": "asset.c2e2ead5050653ee88805d87e5a3bb28173f11694774c7dab81e987a35dc5db1",
        "aws:asset:is-bundled": true,
        "aws:asset:property": "Code"
      }
    },
    "getWalletContentsInvokeFAABA0D2": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "getWalletContents8D2C02F0",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:222439617721:",
              {
                "Ref": "WalletViewerApi7230A4F6"
              },
              "/*"
            ]
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletContents/Invoke"
      }
    },
    "getWalletCollectionsServiceRoleE7BD7109": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletCollections/ServiceRole/Resource"
      }
    },
    "getWalletCollectionsSecurityGroup16C9EE9A": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatic security group for Lambda Function NftWalletViewerStackgetWalletCollections989A617B",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletCollections/SecurityGroup/Resource"
      }
    },
    "getWalletCollections708FA360": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-222439617721-us-east-1",
          "S3Key": "734b7cccdfc6bb575b1ceb957d68a666294435e5ab20d7923c05dd54be97e079.zip"
        },
        "Role": {
          "Fn::GetAtt": [
            "getWalletCollectionsServiceRoleE7BD7109",
            "Arn"
          ]
        },
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1"
          }
        },
        "Handler": "index.handle",
        "MemorySize": 265,
        "Runtime": "nodejs14.x",
        "Timeout": 60,
        "VpcConfig": {
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "getWalletCollectionsSecurityGroup16C9EE9A",
                "GroupId"
              ]
            }
          ],
          "SubnetIds": [
            {
              "Ref": "nftsVPCIsolatedSubnet1Subnet81677B69"
            },
            {
              "Ref": "nftsVPCIsolatedSubnet2Subnet8AB5B053"
            },
            {
              "Ref": "nftsVPCIsolatedSubnet3Subnet97E359DF"
            }
          ]
        }
      },
      "DependsOn": [
        "getWalletCollectionsServiceRoleE7BD7109"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletCollections/Resource",
        "aws:asset:path": "asset.734b7cccdfc6bb575b1ceb957d68a666294435e5ab20d7923c05dd54be97e079",
        "aws:asset:is-bundled": true,
        "aws:asset:property": "Code"
      }
    },
    "getWalletCollectionsInvoke8098E23E": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "getWalletCollections708FA360",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:222439617721:",
              {
                "Ref": "WalletViewerApi7230A4F6"
              },
              "/*"
            ]
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/getWalletCollections/Invoke"
      }
    },
    "WalletViewerApi7230A4F6": {
      "Type": "AWS::ApiGateway::RestApi",
      "Properties": {
        "Description": "Deals with gathering information for the front end",
        "Name": "Wallet Vierer Api"
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Resource"
      }
    },
    "WalletViewerApiCloudWatchRole1746EFC7": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs"
              ]
            ]
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/CloudWatchRole/Resource"
      }
    },
    "WalletViewerApiAccountE369AB5B": {
      "Type": "AWS::ApiGateway::Account",
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "WalletViewerApiCloudWatchRole1746EFC7",
            "Arn"
          ]
        }
      },
      "DependsOn": [
        "WalletViewerApi7230A4F6"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Account"
      }
    },
    "WalletViewerApiDeployment4065F5AD9180ad743df236364fd867ba3a0b7bd2": {
      "Type": "AWS::ApiGateway::Deployment",
      "Properties": {
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        },
        "Description": "Automatically created by the RestApi construct"
      },
      "DependsOn": [
        "WalletViewerApiwalletwalletIdGETF4CE09E1",
        "WalletViewerApiwalletwalletIdB734A3E1",
        "WalletViewerApiwalletcollectionswalletIdGET139C638A",
        "WalletViewerApiwalletcollectionswalletIdFD1B63E6",
        "WalletViewerApiwalletcollections9F3E7349",
        "WalletViewerApiwalletDB228B0F"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Deployment/Resource"
      }
    },
    "WalletViewerApiDeploymentStageProd20A4DE3E": {
      "Type": "AWS::ApiGateway::Stage",
      "Properties": {
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        },
        "DeploymentId": {
          "Ref": "WalletViewerApiDeployment4065F5AD9180ad743df236364fd867ba3a0b7bd2"
        },
        "StageName": "Prod"
      },
      "DependsOn": [
        "WalletViewerApiAccountE369AB5B"
      ],
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/DeploymentStage.Prod/Resource"
      }
    },
    "WalletViewerApiwalletDB228B0F": {
      "Type": "AWS::ApiGateway::Resource",
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "WalletViewerApi7230A4F6",
            "RootResourceId"
          ]
        },
        "PathPart": "wallet",
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/Resource"
      }
    },
    "WalletViewerApiwalletcollections9F3E7349": {
      "Type": "AWS::ApiGateway::Resource",
      "Properties": {
        "ParentId": {
          "Ref": "WalletViewerApiwalletDB228B0F"
        },
        "PathPart": "collections",
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/collections/Resource"
      }
    },
    "WalletViewerApiwalletcollectionswalletIdFD1B63E6": {
      "Type": "AWS::ApiGateway::Resource",
      "Properties": {
        "ParentId": {
          "Ref": "WalletViewerApiwalletcollections9F3E7349"
        },
        "PathPart": "{walletId}",
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/collections/{walletId}/Resource"
      }
    },
    "WalletViewerApiwalletcollectionswalletIdGETApiPermissionNftWalletViewerStackWalletViewerApi4B953E30GETwalletcollectionswalletId2D935EF7": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "getWalletCollections708FA360",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:222439617721:",
              {
                "Ref": "WalletViewerApi7230A4F6"
              },
              "/",
              {
                "Ref": "WalletViewerApiDeploymentStageProd20A4DE3E"
              },
              "/GET/wallet/collections/*"
            ]
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/collections/{walletId}/GET/ApiPermission.NftWalletViewerStackWalletViewerApi4B953E30.GET..wallet.collections.{walletId}"
      }
    },
    "WalletViewerApiwalletcollectionswalletIdGETApiPermissionTestNftWalletViewerStackWalletViewerApi4B953E30GETwalletcollectionswalletId6A5B90C9": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "getWalletCollections708FA360",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:222439617721:",
              {
                "Ref": "WalletViewerApi7230A4F6"
              },
              "/test-invoke-stage/GET/wallet/collections/*"
            ]
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/collections/{walletId}/GET/ApiPermission.Test.NftWalletViewerStackWalletViewerApi4B953E30.GET..wallet.collections.{walletId}"
      }
    },
    "WalletViewerApiwalletcollectionswalletIdGET139C638A": {
      "Type": "AWS::ApiGateway::Method",
      "Properties": {
        "HttpMethod": "GET",
        "ResourceId": {
          "Ref": "WalletViewerApiwalletcollectionswalletIdFD1B63E6"
        },
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        },
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "RequestTemplates": {
            "application/json": "{ \"statusCode\": \"200\" }"
          },
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":apigateway:us-east-1:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "getWalletCollections708FA360",
                    "Arn"
                  ]
                },
                "/invocations"
              ]
            ]
          }
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/collections/{walletId}/GET/Resource"
      }
    },
    "WalletViewerApiwalletwalletIdB734A3E1": {
      "Type": "AWS::ApiGateway::Resource",
      "Properties": {
        "ParentId": {
          "Ref": "WalletViewerApiwalletDB228B0F"
        },
        "PathPart": "{walletId}",
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/{walletId}/Resource"
      }
    },
    "WalletViewerApiwalletwalletIdGETApiPermissionNftWalletViewerStackWalletViewerApi4B953E30GETwalletwalletId06660900": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "getWalletContents8D2C02F0",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:222439617721:",
              {
                "Ref": "WalletViewerApi7230A4F6"
              },
              "/",
              {
                "Ref": "WalletViewerApiDeploymentStageProd20A4DE3E"
              },
              "/GET/wallet/*"
            ]
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/{walletId}/GET/ApiPermission.NftWalletViewerStackWalletViewerApi4B953E30.GET..wallet.{walletId}"
      }
    },
    "WalletViewerApiwalletwalletIdGETApiPermissionTestNftWalletViewerStackWalletViewerApi4B953E30GETwalletwalletId885CA957": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "getWalletContents8D2C02F0",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:222439617721:",
              {
                "Ref": "WalletViewerApi7230A4F6"
              },
              "/test-invoke-stage/GET/wallet/*"
            ]
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/{walletId}/GET/ApiPermission.Test.NftWalletViewerStackWalletViewerApi4B953E30.GET..wallet.{walletId}"
      }
    },
    "WalletViewerApiwalletwalletIdGETF4CE09E1": {
      "Type": "AWS::ApiGateway::Method",
      "Properties": {
        "HttpMethod": "GET",
        "ResourceId": {
          "Ref": "WalletViewerApiwalletwalletIdB734A3E1"
        },
        "RestApiId": {
          "Ref": "WalletViewerApi7230A4F6"
        },
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "RequestTemplates": {
            "application/json": "{ \"statusCode\": \"200\" }"
          },
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":apigateway:us-east-1:lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "getWalletContents8D2C02F0",
                    "Arn"
                  ]
                },
                "/invocations"
              ]
            ]
          }
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/Default/wallet/{walletId}/GET/Resource"
      }
    },
    "WalletViewerApiwalletUsagePlan52A79FCB": {
      "Type": "AWS::ApiGateway::UsagePlan",
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "WalletViewerApi7230A4F6"
            },
            "Stage": {
              "Ref": "WalletViewerApiDeploymentStageProd20A4DE3E"
            },
            "Throttle": {
              "/wallet/{walletId}/GET": {
                "BurstLimit": 300,
                "RateLimit": 100
              },
              "/wallet/collections/{walletId}/GET": {
                "BurstLimit": 300,
                "RateLimit": 100
              }
            }
          }
        ],
        "Throttle": {
          "BurstLimit": 300,
          "RateLimit": 100
        },
        "UsagePlanName": "usage plans"
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/walletUsagePlan/Resource"
      }
    },
    "WalletViewerApiwalletUsagePlanUsagePlanKeyResourceNftWalletViewerStackWalletViewerApigetWalletKeyE10BC0BE9DAAA031": {
      "Type": "AWS::ApiGateway::UsagePlanKey",
      "Properties": {
        "KeyId": {
          "Ref": "WalletViewerApigetWalletKeyD0260D1E"
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "WalletViewerApiwalletUsagePlan52A79FCB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/walletUsagePlan/UsagePlanKeyResource:NftWalletViewerStackWalletViewerApigetWalletKeyE10BC0BE"
      }
    },
    "WalletViewerApigetWalletKeyD0260D1E": {
      "Type": "AWS::ApiGateway::ApiKey",
      "Properties": {
        "Enabled": true,
        "Name": "get-wallet-key",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "WalletViewerApi7230A4F6"
            },
            "StageName": {
              "Ref": "WalletViewerApiDeploymentStageProd20A4DE3E"
            }
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/WalletViewerApi/getWalletKey/Resource"
      }
    },
    "CargotelSyncRDSSGC8D9DF64": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NftWalletViewerStack/CargotelSyncRDSSG",
        "GroupName": "CargotelSyncRDSSG",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "10.240.0.0/16",
            "Description": "vpc1",
            "FromPort": 3306,
            "IpProtocol": "tcp",
            "ToPort": 3306
          },
          {
            "CidrIp": "97.91.130.59/32",
            "Description": "aj-wise-macbook",
            "FromPort": 3306,
            "IpProtocol": "tcp",
            "ToPort": 3306
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "all-1pv4",
            "FromPort": 3306,
            "IpProtocol": "tcp",
            "ToPort": 3306
          }
        ],
        "VpcId": {
          "Ref": "nftsVPC6A9396D9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/CargotelSyncRDSSG/Resource"
      }
    },
    "NftsDatabaseSubnetGroup8A67A4E6": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for NftsDatabase database",
        "SubnetIds": [
          {
            "Ref": "nftsVPCPublicSubnet1SubnetC1E236F7"
          },
          {
            "Ref": "nftsVPCPublicSubnet2Subnet09AEEBD3"
          },
          {
            "Ref": "nftsVPCPublicSubnet3Subnet22C3040C"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/NftsDatabase/SubnetGroup/Default"
      }
    },
    "NftWalletViewerStackNftsDatabaseSecretF7CC4FE93fdaad7efa858a3daf9490cf0a702aeb": {
      "Type": "AWS::SecretsManager::Secret",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName"
              }
            ]
          ]
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{\"username\":\"admin\"}"
        },
        "Name": "NftsDatabaseSecret"
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/NftsDatabase/Secret/Resource"
      }
    },
    "NftsDatabaseSecretAttachment525279C2": {
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
      "Properties": {
        "SecretId": {
          "Ref": "NftWalletViewerStackNftsDatabaseSecretF7CC4FE93fdaad7efa858a3daf9490cf0a702aeb"
        },
        "TargetId": {
          "Ref": "NftsDatabaseB68D21A9"
        },
        "TargetType": "AWS::RDS::DBInstance"
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/NftsDatabase/Secret/Attachment/Resource"
      }
    },
    "NftsDatabaseB68D21A9": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceClass": "db.t4g.small",
        "AllocatedStorage": "300",
        "AllowMajorVersionUpgrade": false,
        "AutoMinorVersionUpgrade": false,
        "BackupRetentionPeriod": 2,
        "CopyTagsToSnapshot": true,
        "DBInstanceIdentifier": "nfts-database",
        "DBSubnetGroupName": {
          "Ref": "NftsDatabaseSubnetGroup8A67A4E6"
        },
        "Engine": "mysql",
        "EngineVersion": "8.0.26",
        "MasterUsername": "admin",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "NftWalletViewerStackNftsDatabaseSecretF7CC4FE93fdaad7efa858a3daf9490cf0a702aeb"
              },
              ":SecretString:password::}}"
            ]
          ]
        },
        "MaxAllocatedStorage": 600,
        "Port": "3306",
        "PreferredBackupWindow": "08:00-08:30",
        "PreferredMaintenanceWindow": "sun:06:00-sun:06:30",
        "PubliclyAccessible": true,
        "StorageType": "gp2",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "CargotelSyncRDSSGC8D9DF64",
              "GroupId"
            ]
          }
        ]
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/NftsDatabase/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/21SXW/bMAz8LX1X1LUF+u40WFEM24yk62tAy1yqxJYMkWoRGP7vo2QnNoo98Xjmx+noe333qL/dwCetTH1aNbbS/Y7BnJRQ+x7Nve7fOqOe/rq38kmVsWqs2cXKISduRlsfGV+hanDmZ64g8sYCW++uxaoM9gMY5xkvjjEIfhb2E87T0ikrWGS9t+hY7dDEYPn8HHzs8rolMagG2qqGvfM1Hkn/yuF7dCavt9DqfutHnSkOih72QIRMukhBcr2O5oS8BsJpmu6l/DpEcImhtUSSDQo6exhVymgkLjqbp8+wMMZHkb7BrvHn/AphF5mYfhity0BafQwGs4JLMs0c8U/kd18nakJ/SBrLBrK6/yc/8KxEUApJU0aDCjXpfgMMlSx7ccTgZP54lqvFm/WSuFSL8WG83WZ96RQ/M0stONkbsnNT4RheIRyQFwe9Fnz9Mgzz4 [...]
      },
      "Metadata": {
        "aws:cdk:path": "NftWalletViewerStack/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "WalletViewerApiEndpoint0BEC12DD": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "WalletViewerApi7230A4F6"
            },
            ".execute-api.us-east-1.",
            {
              "Ref": "AWS::URLSuffix"
            },
            "/",
            {
              "Ref": "WalletViewerApiDeploymentStageProd20A4DE3E"
            },
            "/"
          ]
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
